% fix for width and align-left.

--- a/css/main.css
+++ b/css/main.css
@@ -8,13 +8,13 @@ html{
 }
 
 .container{
-	max-width: 1200px;
+	max-width: 100%;
 	margin: 0 auto;
-	display: flex;
+	/*display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-flow: row wrap;
-	flex-direction: column;
+	flex-direction: column;*/
 }
 
 body {
@@ -56,9 +56,9 @@ p {
 
 /*The widths are in a percentage!*/
 header {
-	display: flex;
 	border-bottom: 3px solid #77a466;
 	margin: 0 auto;
+	display: flex;
 	flex-flow: column;
 }
 
@@ -106,8 +106,8 @@ nav ul li a{
 	margin: 0 auto;
 	clear: both;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	justify-content: left;
+	align-items: left;
 	flex-direction: column;
 }
 .main-image {
@@ -144,7 +144,7 @@ nav ul li a{
 	width: 100%;
 	height: auto;
 	border-top: 1px solid #eee;
-	text-align: center;
+	text-align: left;
 }
 
 .section-one h4 {
@@ -168,14 +168,14 @@ nav ul li a{
 .menu li {
 	padding: 10px 0;
 	color:#77a466;
-	text-align: center;
+	text-align: left;
 }
 
 .reviews {
 	color: #333;
 	font-size: 1em;
 	line-height: 21px;
-	text-align: center;
+	text-align: left;
 }
 
 .address {
